fix:remove search icon on smaller screen - for visibility

--- a/frontend/views/static/styles/filters.css
+++ b/frontend/views/static/styles/filters.css
@@ -401,6 +401,10 @@ input[type="range"] {
 		width: 100%;
 	}
 
+	.search-container img {
+		display: none;
+	}
+
 	.membersFilter {
 		gap: 3px;
 		font-size: 0.8em;
